@@ -1,3 +1,6 @@
+- Implemented a method to inject new graphics cards from a plist, no need to hardcode device ids anymore !! (for now, only nvidia cards are supported, see doc/ModuleHelp.txt for usage)
+- Moved the smbios detection code to the freebsd one
+
 - Fixed a bug in the bundle dependency dispatcher
 
 - security fixes in printf.c
